--- a/conworld/geography/index.html
+++ b/conworld/geography/index.html
@@ -21,32 +21,9 @@
     <p class="indent">大きく分けて3つの大陸から構成されており、それらはまとめて「三大大陸」と呼ばれている。三大大陸で最も小さく、北に位置するものを「中央大陸」と呼び、この大陸からの視点で残りの大陸を「東方大陸」「西方大陸」と呼ぶ。</p>
     <h3>中央大陸</h3>
     <p class="indent">北半球に存在する大陸。現在最も創作が進んでおり、<a href="../../conlang/nefhalzerde">ネサルゼルデ語</a>が使用される地域もここに存在する。</p>
-    <h4>地域区分</h4>
-    <dl>
-      <dt>ガテフィハス</dt>
-      <dd>北方を山脈、南方を海に囲まれた大陸南方の地域。メニスタ山脈・サグナル山脈に囲まれており、サナクトゥ・ラトローという2つの半島が存在する。2半島の間には、ネサルゼーデスの故地であるラン諸島が存在する。ネサルゼルデ語はネサルゼーデスの公用語であり、ネサルゼーデスの崩壊、および口語ネサルゼルデ語の分化・発展以降もこの地域の共通語としてあり続けた。
-        <ul>
-          <li>サナクトゥ</li>
-          <li>ラトロー</li>
-          <li>メルドウェスタ</li>
-          <li>ラン諸島</li>
-          <li>バルミハス諸島</li>
-          <li>ミョルモ諸島</li>
-        </ul>
-      </dd>
-      <dt>ヘイシュー</dt>
-      <dd>大陸東方部。主に遊牧民が居住し、古くから遊牧国家が栄えた。たびたびサナクトゥの国家からの侵略を受けている。山岳地帯が多く全体的に寒冷だが、そのような寒さへの耐性を持つ生物が多く、生態系は以外にも豊かである。</dd>
-      <dt>コリョ</dt>
-      <dd>大陸北部。</dd>
-      <dt>シューソ</dt>
-      <dd></dd>
-      <dt>アベンツォ</dt>
-      <dd>大陸北東部。全体的に低地が多く平坦な土地が広がっている。</dd>
-      <dt>コリクティル</dt>
-      <dd>大陸南方、ガテフィアスの西部に存在する地域。</dd>
-    </ul>
+    <p class="indent">地形は2009年ごろから創作していた架空地図から流用しており、中央大陸の歴史もその架空史から引用されている。</p>
     <h3>東方大陸</h3>
-    <p class="indent">北半球から南半球にかけて広がる大陸。大きく分けて3つの陸地があり、それらが地峡で繋がることで一つの大陸を形成している。</p>
+    <p class="indent">北半球から南半球にかけて広がる大陸。大きく分けて3つの陸地があり、それらが地峡で繋がることで一つの大陸を形成している。東方大陸の最も東に位置する陸地は、元はネサルゼルデ語の使用地域として創作されたものだったが、方針変更によりネサルゼルデ語の使用地域は中央大陸が担うこととなり、この地域は別口で2014～2016年頃に創作していた「機械人の架空史」の舞台として設定された。</p>
     <h3>西方大陸</h3>
     <p class="indent">北半球から南半球にかけて広がる、コルサレス内で最も面積の広い大陸。</p>
   </main>
